tests/ui/rust-2024/prelude-migration/in_2024_compatibility.stderr
error: trait method `poll` will become ambiguous in Rust 2024
  --> $DIR/in_2024_compatibility.rs:10:5
   |
LL |     core::pin::pin!(async {}).poll(&mut context());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: disambiguate the associated function: `Meow::poll(&core::pin::pin!(async {}), &mut context())`
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/prelude.html>
note: the lint level is defined here
  --> $DIR/in_2024_compatibility.rs:3:9
   |
LL | #![deny(rust_2024_compatibility)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[deny(rust_2024_prelude_collisions)]` implied by `#[deny(rust_2024_compatibility)]`

error: aborting due to 1 previous error

